forth/test/fail/test_const_fold_umod_zero.af
use' ../../lang.af
fun: .test_const_fold_umod_zero { -- out } 29 0 .umod end
